# UpstreamWX

./: .env.example  .gitignore  CLAUDE.md  CaveTak-Weather-PRD-v0.8.md  README.md  UpstreamWX-PRD-v0.8.md  pyproject.toml  roadmap.md
.claude/hooks/: session-start.sh
.github/workflows/: ci.yml  deploy-pages.yml
deploy/: README.md  _lib.sh  bootstrap.sh  config.env.example  config.staging.env.example  deploy.sh  remote-deploy.sh  upstreamwx.env.example  uwx-ctl
deploy/nginx/: default-server.conf  landing.conf  upstreamwx.conf
deploy/systemd/: journald@upstreamwx.conf  upstreamwx-api.service
docs/: SA-01-public-auth-workplan.md  Security Audit 2026-07-14.md  changelog-2026-07-02-data-quality.md  changelog-2026-07-02-gefs-resilience.md  changelog-2026-07-15-sa-03-04.md  changelog-2026-07-17-sa-05.md  changelog-2026-07-17-sa-06-09-13.md  changelog-2026-07-18-issue-132-host-hardening.md  changelog-2026-07-18-sa-08.md  changelog-2026-07-19-hourly-hazard-series.md  changelog-2026-07-19-issue-132-staging-validation.md  changelog-2026-07-20-staging-deploy-hardening.md  code-review-2026-07-02.md  deployment-workflow.md  font-vendoring-provenance.md  prod-release-runbook-v0.7.0.md  sa-02-hardening-workplan.md  sa-03-04-hardening-workplan.md  sa-05-vendor-map-libs-csp-workplan.md  sa-06-09-13-hardening-workplan.md  sa-08-hardening-workplan.md  staging-rebuild-runbook-2026-07-20.md
docs/m0.0/: README.md  resource-profile.md  spike-a-report.md  spike-b-report.md  spike-c-report.md  spike-d-streamstats-report.md  spike-d-streamstats.json  spike-e-refs-report.md  spike-f-gefs-report.md
docs/m0.1/: README.md
docs/m0.2/: README.md
docs/m0.3/: README.md
docs/m0.4/: README.md
frontend/: README.md  STYLE_GUIDE.md  index.html  manifest.webmanifest  sw.js
frontend/data/: display-config.json  sample-briefing.json
frontend/js/: app.js  icons.js
frontend/pdf/: briefing-pdf.html  briefing-pdf.js  render-example.mjs
frontend/styles/: app.css  tokens.css
landing/: index.html
landing/styles/: landing.css  tokens.css
spikes/spike_a_sref/: run_spike_a.py
spikes/spike_b_huc/: run_spike_b.py
spikes/spike_c_href/: run_spike_c.py
spikes/spike_d_streamstats/: run_spike_d.py
spikes/spike_e_refs/: run_spike_e.py
spikes/spike_f_gefs/: run_spike_f.py
src/upstreamwx/: __init__.py  config.py  timezones.py  units.py
src/upstreamwx/api/: __init__.py  app.py  auth.py  budget.py  cache.py  cycles.py  models.py  scheduler.py  service.py
src/upstreamwx/engine/: __init__.py  assess.py  confidence.py  models.py  phases.py  thresholds.py
src/upstreamwx/gefs/: __init__.py  cache.py  extract.py  sources.py
src/upstreamwx/grib/: __init__.py  cache.py  idx.py  zonal.py
src/upstreamwx/href/: __init__.py  aggregate.py  cache.py  extract.py  fetch.py  sources.py
tests/: gen_sitrep_goldens.py  test_api.py  test_api_auth.py  test_api_budget.py  test_api_cache_bytes.py  test_api_cache_isolation.py  test_api_cycles.py  test_api_hardening_sa09_sa13.py  test_api_limits.py  test_api_pdf_hardening_sa08.py  test_api_scheduler_budget.py  test_cache_root_degradation.py  test_data_quality.py  test_decode_pool.py  test_engine_assess.py  test_engine_corpus.py  test_engine_phases.py  test_engine_replay.py  test_ensemble_feeds.py  test_ensemble_providers.py  test_gefs_cache.py  test_grib_cache.py  test_grib_idx.py  test_hazard_series.py  test_href_aggregate.py  test_href_cache.py  test_href_extract.py  test_href_provider.py  test_href_selection.py  test_ingest.py  test_laoc.py  test_openmeteo_retry.py  test_pdf_export.py  test_phase_inputs.py  test_pourpoint.py  test_qpe_provider.py  test_refs_cache.py  test_refs_selection.py  test_roc_clip.py  test_scheduler.py  (+20 more)
tests/corpus/: cold_wet.yaml  confidence.yaml  flash_flood.yaml  heat.yaml  historical_replay.yaml  lightning.yaml
tests/fixtures/: README.md  href_sample_subset.grib2
(+54 files in other folders)
