[project]
name = "upstreamwx"
version = "0.0.0"
description = "Mission-specific multi-hazard weather briefings for caving and canyoneering (M0.0 foundation)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "GPL-3.0-or-later" }
authors = [{ name = "Chris Lee" }]
dependencies = [
    "numpy",
    "xarray",
    "cfgrib",
    "eccodes",
    "geopandas",
    "shapely",
    "pyproj",
    "regionmask",
    # HyRiver suite — pin to a single coordinated minor to avoid component skew
    # (a stray older pygeohydro breaks async_retriever.ServiceError).
    "pynhd>=0.19,<0.20",
    "pygeohydro>=0.19,<0.20",
    "pygeoutils>=0.19,<0.20",
    "networkx",
    "requests",
    "pydantic-settings",
    "pyyaml",
    "anthropic",
    # M0.3 API: always-on briefing service on the existing EC2 (PRD §7).
    "fastapi",
    "uvicorn[standard]",
]

[project.scripts]
upstreamwx = "upstreamwx.sitrep.cli:main"
upstreamwx-api = "upstreamwx.api.app:main"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
    "psutil",
]
# Optional: exact fractional-coverage zonal stats for tiny polygons vs the coarse SREF grid.
exact = ["exactextract"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/upstreamwx"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests", "spikes"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "network: test hits live services (NOMADS/AWS/USGS); deselected by default",
]
# Default run is hermetic: offline tests against committed fixtures only.
addopts = "-m 'not network'"
